KL mobile mainnav spacing fix attempt v18

--- a/style.css
+++ b/style.css
@@ -4721,7 +4721,7 @@ span.highlight {
 }
 #hero-section #mobile-nav, #subpage-hero #mobile-nav {
 	position: absolute;
-	bottom: 30px;
+	bottom: 8vh;
 	left: 0;
 	padding: 0 20px;
 	width: 100%;
